# repoinspo

./: .env.example  LICENSE  PLAN.md  README.md  pyproject.toml
src/repoinspo/: __init__.py  cli.py  config.py  models.py  prompts.py  server.py
src/repoinspo/core/: __init__.py  analysis.py  council.py  embeddings.py  github.py  ingestion.py  pipeline.py
tests/: conftest.py  test_analysis.py  test_github.py  test_ingestion.py  test_pipeline.py
